Aress7/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Route_to_Market__c</fullName>
        <label>Account Route to Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Built Environment</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Motor Group</fullName>
                </value>
                <value>
                    <fullName>Leasing Company</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>BE Influencer</fullName>
                </value>
                <value>
                    <fullName>Agents / Developers</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Business Park</fullName>
                </value>
                <value>
                    <fullName>Depot</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Carpark Operator</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Attraction</fullName>
                </value>
                <value>
                    <fullName>Holiday Venue</fullName>
                </value>
                <value>
                    <fullName>Car Club</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Grocer</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Sport Venue</fullName>
                </value>
                <value>
                    <fullName>Food/Beverage</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
                <value>
                    <fullName>Health/Wellbeing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assign_by_Route_to_Market__c</fullName>
        <description>For our web forms -- so whenever someone fills out a form on our website, it will create a lead in Salesforce and assign it to the relevant route to market.</description>
        <label>Assign by Route to Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Attempts__c</fullName>
        <label>Contact Attempts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion__c</fullName>
        <label>Conversion Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason_Other__c</fullName>
        <label>Disqualified Reason (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Not Decision Maker</fullName>
                </value>
                <value>
                    <fullName>No Purchase Intent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_RTM__c</fullName>
        <inlineHelpText>Choose which route to market you expect this Lead to be. This is important, as we use this to decide which marketing is directed at this customer.</inlineHelpText>
        <label>Expected RTM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Home Strategic</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Workplace Strategic</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Destination Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introduction_made_by__c</fullName>
        <label>Introduction made by:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Since__c</fullName>
        <formula>Today() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Since</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Industry_Other__c</fullName>
        <label>Lead Industry (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Industry__c</fullName>
        <label>Lead Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_chargepoints__c</fullName>
        <description>How many chargepoints the prospect is considering having installed.</description>
        <inlineHelpText>How many chargepoints the prospect is considering in having installed.</inlineHelpText>
        <label>No, of points they are considering</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurture_Reason_Other__c</fullName>
        <label>Nurture Reason (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurture_Reason__c</fullName>
        <label>Nurture Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Can&apos;t make contact</fullName>
                </value>
                <value>
                    <fullName>Doing high level research with no time frame</fullName>
                </value>
                <value>
                    <fullName>No chargepoint requirement for 6 months</fullName>
                </value>
                <value>
                    <fullName>No chargepoint requirement for 12 months</fullName>
                </value>
                <value>
                    <fullName>No chargepoint requirement for 18 months</fullName>
                </value>
                <value>
                    <fullName>No chargepoint requirement for 24 months</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Route_to_Market__c</fullName>
        <label>Primary Route to Market</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Trying_to_Solve_Other__c</fullName>
        <label>Problem Trying to Solve (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Trying_to_Solve__c</fullName>
        <label>Problem Trying to Solve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_BE__c</fullName>
        <description>Field to capture the development / project of Built Environment prospects.</description>
        <label>Project Name (BE only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Route_to_Market__c</fullName>
        <label>Secondary Route to Market</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_Route_to_Market__c</fullName>
        <label>Which Route to Market?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Home Strategic</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Workplace Strategic</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Destination Strategic</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2018_MQL_Blitz__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to mark leads taken on temporarily from another sales person.</description>
        <label>Lead Owned Temporarily</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Lead_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Assign_by_Route_to_Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_MQLs</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <label>Me: All My MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_but_Olly</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Oli</value>
        </filters>
        <label>All_but_olly</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Automotive_Open_MQLs</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JHors</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>trishan</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>claire</value>
        </filters>
        <label>Automotive Team - Open MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Automotive_Team_All_MQLs</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JHors</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>claire</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>trishan</value>
        </filters>
        <label>Automotive Team - All MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Automotive_Team_Open_MQLs</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4) AND (5 OR 6 OR 7 OR 8)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contact Attempted</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualifying</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>kim</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>claire</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>trishan</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JHors</value>
        </filters>
        <label>Automotive Team - MQLs to Follow Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Built_Environment_Open_MQLs</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JStev</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>izzy</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mwatk</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rhugh</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>sdept</value>
        </filters>
        <label>Built Env. Team - Open MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Built_Environment_Team_All_MQLs</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JStev</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>izzy</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mwatk</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rhugh</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>sdept</value>
        </filters>
        <label>Built Env. Team - All MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Built_Environment_Team_Open_MQLs</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4) AND (5 OR 6 OR 7 OR 8 OR 9)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Contact_Attempts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contact Attempted</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualifying</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>izzy</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mwatk</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rhugh</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>sdept</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>JStev</value>
        </filters>
        <label>Built Env. Team - MQLs to Follow Up</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Destination</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>destination</value>
        </filters>
        <label>Destination</label>
        <language>en_US</language>
        <sharedTo>
            <role>Executive_Staff</role>
            <role>Head_of_Destination</role>
            <role>Retail_Account_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Destination_Open_MQLs</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7 OR 8)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>crobe</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>liam</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rdunc</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>zed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jarred</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>apott</value>
        </filters>
        <label>Destination Team - Open MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Destination_Team_All_MQLs</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>apott</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>crobe</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>liam</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rdunc</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>zed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jarred</value>
        </filters>
        <label>Destination Team - All MQLs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Destination_Team_Open_MQLs</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4) AND (5 OR 6 OR 7 OR 8 OR 9 OR 10)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contact Attempted</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualifying</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>rdunc</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>zed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jarred</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>apott</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>crobe</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>liam</value>
        </filters>
        <label>Destination Team - MQLs to Follow Up</label>
        <language>en_US</language>
    </listViews>
</CustomObject>